# simple-dht11

./: Cargo.toml  README.md  build.sh  buildRelease.sh
src/: dht11.rs  lib.rs
