[package]
authors = ["BButner"]
description = "A simple library to get a reading from a DHT11."
name = "simple-dht11"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*.rs",
    "examples/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.0"
