[package]
authors = ["BButner"]
description = "A simple library to get a reading from a DHT11 hooked up to a Raspberry Pi."
name = "simple-dht11"
version = "0.1.2"
edition = "2021"
homepage = "https://github.com/bbutner/simple-dht11"
repository = "https://github.com/bbutner/simple-dht11"
readme = "README.md"
license = "GPL-3.0"
include = [
    "src/**/*.rs",
    "examples/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.0"
